--- a/app/views/user_keys/form_partials/_organizations_checkboxes.html.erb
+++ b/app/views/user_keys/form_partials/_organizations_checkboxes.html.erb
@@ -7,7 +7,7 @@
 <div id="organization_toggle" class="big-button">Toggle Organization Checkboxes</div>
 
 <div id="organization_toggle_panel">
-
+ <div class="checkbox_panel">
   <p>
     <% if Organization.active.empty? %>
     No organizations can be selected because there are no active organizations in the system.
@@ -38,8 +38,11 @@
     <% end %>
   </p>
   
-<div id="second_organization_toggle" class="big-button">Toggle Organization Checkboxes</div>
-  
+  <div id="second_organization_toggle" class="big-button">
+    Toggle Organization Checkboxes
+  </div>
+ 
+ </div>
 </div>
 
 <br/>
