--- a/app/views/user_keys/form_partials/_resources_checkboxes.html.erb
+++ b/app/views/user_keys/form_partials/_resources_checkboxes.html.erb
@@ -4,7 +4,7 @@
   <div class="row">
     <h2><%= resource.capitalize %></h2>
     
-    <div class="small-7 columns">
+    <div class="small-5 columns">
     <h4>Rows</h4>
     
       <% @user_key.whitelists.restrict_to(resource).to_a.each do |whitelist| %>
@@ -20,21 +20,27 @@
                                    partial: 'user_keys/form_partials/whitelist_fields',
                                    html_options: { data: {'association-insertion-node': 'this' }},
                                    render_options: {:locals => {:resource => resource }}, class: "small-button" %>
-        <br/><br/>
       </div>
     
     </div>
 
-    <div class="small-4 small-offset-1 columns">
+    <div class="small-7 columns">
     <h4>Columns</h4>
       <% if Column.restrict_to(resource).empty? %>
       None exist in the system.
       <% else %>
-          <% for column in Column.restrict_to(resource).alphabetical %>
-              <%= check_box_tag "user_key[column_ids][]", column.id, @user_key.columns.include?(column) %>
-              <%= column.name %>
-              <br />
+        <div class="checkbox_panel">
+          <% Column.restrict_to(resource).alphabetical.in_groups_of(2, false) do |column_group| %>
+            <div class="row no_bullets">
+              <%= f.collection_check_boxes(:column_ids, column_group, :id, :name) do |b| %>
+              <div class="small-6 columns">
+              <li><%= b.label { b.check_box + ' ' + b.text} %></li>
+              <% %>
+              </div>
+            <% end %>
+            </div>
           <% end %>
+        </div>
       <% end %>
     </div>
     
