--- a/app/views/user_keys/form_partials/_whitelist_fields.html.erb
+++ b/app/views/user_keys/form_partials/_whitelist_fields.html.erb
@@ -1,18 +1,15 @@
 <!-- pass in f as form value, and resource as resource, from resources_checkboxes partial  -->
 
-<div class="nested-fields"><!-- class="nested-fields" is required for the nested jquery-->
-
-  <hr/>
-    <div class="small-10 columns">
-      <ul class="no_bullets">
-        <%= f.collection_check_boxes(:filter_ids, Filter.restrict_to(resource).alphabetical, :id, :name) do |b| %>
-          <li><%= b.label { b.check_box + ' ' + b.text} %></li>
-        <% end %>
-      </ul>
+<!-- class="nested-fields" is required for the nested jquery-->
+<div class="nested-fields">
+  <div class="checkbox_panel">
+    <div class="right">
+      <%= link_to_remove_association "X", f, class: "small-button right"  %>
     </div>
-    <div class="small-2 columns">
-      <%= link_to_remove_association "Remove clause", f, class: "small-button right"  %>
-    </div>
-  <hr/>
-
+    <ul class="no_bullets">
+      <%= f.collection_check_boxes(:filter_ids, Filter.restrict_to(resource).alphabetical, :id, :name) do |b| %>
+        <li><%= b.label { b.check_box + ' ' + b.text} %></li>
+      <% end %>
+    </ul>
+  </div>
 </div>
