--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -1,31 +1,26 @@
-<%= form_for(@user) do |f| %>
+<%= form_for(@question) do |f| %>
   <fieldset>
 
-  <%= render 'shared/error_messages', object: @user %>
+  <%= render 'shared/error_messages', object: @question %>
 
-  <p>
-    <strong>Andrew:</strong>
-    <%= @user.andrew_id %>
-  </p>
-  
   <div class="collapsed_row">
     <div class="three-column">
-      <%= f.label :role, class: "prefix" %>
+      <%= f.label :message, class: "prefix" %>
     </div>
     <div class="nine-column">
-      <%= f.select :role, User::ROLE_LIST %>
+      <%= f.text_area :message %>
     </div>
   </div>
   <div class="collapsed_row">
-    <%= f.check_box :active %>
-    <%= f.label :active %>
+    <%= f.check_box :required %>
+    <%= f.label :required %>
   </div>
   
   <br/>
   
   <div class="actions">
     <%= f.submit class: "big-button success" %> |
-    <%= link_to 'Cancel', @user, class: "big-button secondary" %>
+    <%= link_to 'Cancel', questions_url, class: "big-button secondary" %>
   </div>
   
   </fieldset>
