--- a/app/views/user_keys/form_partials/_resources_checkboxes.html.erb
+++ b/app/views/user_keys/form_partials/_resources_checkboxes.html.erb
@@ -1,27 +1,27 @@
 <% for resource in Resource::RESOURCE_LIST %>
   <hr/>
-  
+
   <div class="row">
     <h2><%= resource.capitalize %></h2>
-    
+
     <div class="small-5 columns">
     <h4>Rows</h4>
-    
+
       <% @user_key.whitelists.restrict_to(resource).to_a.each do |whitelist| %>
         <%= f.fields_for :whitelists, whitelist do |p| %>
           <%= render partial: 'user_keys/form_partials/whitelist_fields',
                     locals: { f: p, resource: resource } %>
         <% end %>
       <% end %>
-  
+
       <div id="<%= resource %>"> <!-- Nested form uses this #tag to add new nested form-->
         <br/>
         <%= link_to_add_association "Add #{resource} clause", f, :whitelists,
                                    partial: 'user_keys/form_partials/whitelist_fields',
-                                   html_options: { data: {'association-insertion-node': 'this' }},
-                                   render_options: {:locals => {:resource => resource }}, class: "small-button" %>
+                                   html_options: { data: { 'association-insertion-node' => 'this' }},
+                                   render_options: { locals: { resource: resource } }, class: "small-button" %>
       </div>
-    
+
     </div>
 
     <div class="small-7 columns">
@@ -43,7 +43,7 @@
         </div>
       <% end %>
     </div>
-    
+
   </div> <!-- End row div -->
-    
+
 <% end %>
