--- a/app/views/user_keys/own_user_keys.html.erb
+++ b/app/views/user_keys/own_user_keys.html.erb
@@ -6,7 +6,7 @@
 
 <%# Kaminari paginate %>
 <div id="paginator">
-  <%= paginate @user_keys, remote: true %></div>
+  <%= paginate @user_keys, remote: true %>
 </div>
 
 <br>
