--- a/app/views/user_keys/show.html.erb
+++ b/app/views/user_keys/show.html.erb
@@ -16,14 +16,13 @@
   <li class="tab-title active"><a href="#statusPanel">Status</a></li>
   <% if @current_user.role? :is_staff %>
   <li class="tab-title"><a href="#permissionsPanel">Permissions</a></li>
-  <%else%>
-    <li class="tab-title"><a href="#documentationPanel">Documentation</a></li>
-  <%end%>
+  <% end %>
+  <li class="tab-title"><a href="#documentationPanel">Documentation</a></li>
+  
   <li class="tab-title"><a href="#commentsPanel">Comments</a></li>
 </ul>
 
 <div class="tabs-content">
-
 
 <div class="content active" id="statusPanel">
 
@@ -61,7 +60,8 @@
 
 <%# Staffmembers see private information %>
 <% if @current_user.role? :is_staff %>
-  <div class="staff_only panel">
+<div class="content">
+  <div class="staff_only panel" id="permissionsPanel">
   <h3>Staff only</h3>
   <br>
     
@@ -71,27 +71,24 @@
   </div>
   
   
-  <% if @user_key.at_stage? :awaiting_confirmation %>
-  <div class="staff_only panel row">
-  <!-- Show the key's approvers if the key is at the approval stage. -->
-      <div class="column">
-        <%= render partial: 'user_keys/show_partials/list_of_approvers' %>
-      </div>
-      <div class="column">
-        <% if @current_user.role? :is_approver %>
-          <%= render partial: 'user_keys/show_partials/approval_checkbox' %>
-        <% end %>
-      </div>
+    <% if @user_key.at_stage? :awaiting_confirmation %>
+    <div class="staff_only panel row">
+    <!-- Show the key's approvers if the key is at the approval stage. -->
+        <div class="column">
+          <%= render partial: 'user_keys/show_partials/list_of_approvers' %>
+        </div>
+        <div class="column">
+          <% if @current_user.role? :is_approver %>
+            <%= render partial: 'user_keys/show_partials/approval_checkbox' %>
+          <% end %>
+        </div>
+    </div>
+    <% end %>
   </div>
-  <% end %>  
+</div>
 <% end %>
 
-<!-- End of general staff-only information. -->
-
-
-
-</div>
-<!-- End of permisisons panel -->
+<%# End of staff-only information. %>
 
 <div class="content" id="documentationPanel">
 
