--- a/app/views/user_keys/show_partials/_admin_only.html.erb
+++ b/app/views/user_keys/show_partials/_admin_only.html.erb
@@ -10,11 +10,12 @@
     <br/>
 
     <%#  Currently no restrictions exist for delete. %>
-      <%= link_to 'Delete', @user_key, method: :delete,
+    <%= link_to 'Delete', @user_key, method: :delete,
                  data: { confirm: 'Are you sure? The application will be deleted, and the requester will be notified that their application has been terminated.' }, class: "small-button" %>
     <%#   Reset is currently only available after submission and before confirmation. %>
     <% if @user_key.at_stage? :awaiting_confirmation or @user_key.at_stage? :awaiting_filters %>
       | <%= link_to 'Reset', set_as_reset_path(@user_key), method: :patch,
+                 data: { disable_with: "Please Wait..." },
                  data: { confirm: 'Are you sure? The key application and comments will be returned to the requester.' },
                  class: "small-button" %>
     <% end %>
