--- a/app/views/user_keys/show_partials/_submit_buttons.html.erb
+++ b/app/views/user_keys/show_partials/_submit_buttons.html.erb
@@ -1,11 +1,16 @@
 <%# Key owner can submit the key or edit the application before submitting. %>
-<%= link_to 'Submit request', set_as_submitted_path(@user_key), method: :patch,
-            data: {disable_with: "Please Wait..." },
-            class: "big-button success",
-            disabled: !(@user_key.can_be_set_to? :awaiting_filters)  %>
-|
-<%= link_to 'Edit application', edit_user_key_path(@user_key), class: "big-button" %> |
-
+  <%= link_to 'Submit request', set_as_submitted_path(@user_key), method: :patch,
+              data: {disable_with: "Please Wait..." },
+              class: "big-button success",
+              disabled: !(@user_key.can_be_set_to? :awaiting_filters)  %>
+  |
+  <%= link_to 'Edit application', edit_user_key_path(@user_key), class: "big-button" %>
+  |
+   <%#  Currently no restrictions exist for discarding an application. %>
+   <%= link_to 'Discard', @user_key, method: :delete,
+                 data: { confirm: 'Are you sure? This application will be discarded.' },
+                 class: "big-button" %>
+  |
 <% if @current_user.role? :admin %>
   <%= link_to 'Back to all keys', user_keys_path, class: "big-button secondary" %>
 <% else %>
