--- a/app/views/user_keys/show.html.erb
+++ b/app/views/user_keys/show.html.erb
@@ -58,16 +58,19 @@
 </div>
 <%# End of public information. %>
 
+</div>
+
 <%# Staffmembers see private information %>
+
+<div class="content" id="permissionsPanel">
+  
 <% if @current_user.role? :is_staff %>
 <div class="content">
-  <div class="staff_only panel" id="permissionsPanel">
+  <div class="staff_only panel">
   <h3>Staff only</h3>
   <br>
-    
     <%= render partial: 'user_keys/show_partials/list_of_resources' %>
     <%= render partial: 'user_keys/show_partials/list_of_organizations' %>
-    
   </div>
   
   
@@ -84,18 +87,17 @@
         </div>
     </div>
     <% end %>
-  </div>
+
 </div>
 <% end %>
 
-<%# End of staff-only information. %>
+</div> <%# End of permissions tab. %>
 
 <div class="content" id="documentationPanel">
 
 <!-- FIXME add dynamic documentation content here -->
 
 </div>
-
 
 <div class="content" id="commentsPanel">
 <!--Show notes from Admin -->
