--- a/app/views/filters/_form.html.erb
+++ b/app/views/filters/_form.html.erb
@@ -16,7 +16,7 @@
       <%= f.label :filter_name, class: "prefix" %>
     </div>
     <div class="s9">
-      <%= f.select :filter_name, Resource::PARAM_LIST %>
+      <%= f.select :filter_name, Resource::PARAM_NAME_HASH %>
     </div>
   </div>
   <div class="collapsed_row">
