--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -19,6 +19,10 @@
         <%= link_to "Filters", filters_path %>
       </li>
       
+      <li class="<%= 'active' if cName == 'organizations' %>">
+        <%= link_to "Orgs", organizations_path %>
+      </li>
+      
       <li class="<%= 'active' if cName == 'questions' %>">
         <%= link_to "Settings", questions_path %>
       </li>
