--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -4,10 +4,10 @@
   <%= render 'shared/error_messages', object: @question %>
 
   <div class="collapsed_row">
-    <div class="three-column">
+    <div class="s3">
       <%= f.label :message, class: "prefix" %>
     </div>
-    <div class="nine-column">
+    <div class="s9">
       <%= f.text_area :message %>
     </div>
   </div>
