--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -10,7 +10,7 @@
       <% if question.required %>
         <strong>(Required)&nbsp;</strong>
       <% end %>
-      <%= question.message %>
+      <%= markdown(question.message) %>
       <br/>
       <%= link_to 'Edit', edit_question_path(question), class: "big-button" %> | 
       <%= link_to 'Delete', question_path(question), method: :delete, class: "big-button" %>
