--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,17 +1,19 @@
 <h1>All Users</h1>
 
-<%# Begin @requesters %>
-<div id="requesters">
-  <%= render partial: 'users/index_partials/index_table', locals: {user_type: "requesters", users: @requesters } %>
-</div>
-
+<div class="s6">
+  <%# Begin @requesters %>
+  <div id="requesters">
+    <%= render partial: 'users/index_partials/index_table', locals: {user_type: "requesters", users: @requesters } %>
+  </div>
 <%# Kaminari paginate %>
-<div id="paginator">
+<div id="paginator" class="left">
   <%= paginate @requesters, remote: true %>
 </div>
 
-<br/>
+</div>
 
-<%# Begin @staff %>
-<%# anyone looking at @staff is staff, so @staff is never empty %>
-<%= render partial: 'users/index_partials/index_table', locals: {user_type: "staff", users: @staff } %>
+<div class="s4 right">
+  <%# Begin @staff %>
+  <%# anyone looking at @staff is staff, so @staff is never empty %>
+  <%= render partial: 'users/index_partials/index_table', locals: {user_type: "staff", users: @staff } %>
+</div>
