--- a/app/views/pages/_form.html.erb
+++ b/app/views/pages/_form.html.erb
@@ -3,6 +3,8 @@
     <%= f.text_area :message, rows: "30"  %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit class: "big-button" %>
   </div>
 <% end %>
+
+<%= render 'shared/markdown_help' %>
