--- a/app/views/pages/edit.html.erb
+++ b/app/views/pages/edit.html.erb
@@ -1,5 +1,5 @@
-<h1>Editing Page</h1>
+<h1>Editing "<%= @page.name %>" page</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Cancel', page_path(@page.url) %>
+<%= link_to 'Cancel', page_path(@page.url), class: "small-button" %>
