Fixed a couple of CanCan issues

--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -2,7 +2,7 @@
 
 <%= markdown(@page.message) %>
 
-<% if @current_user.role? :admin %>
+<% if @current_user and @current_user.role? :admin %>
 
   <%= link_to 'Edit', edit_page_path(@page.url) %>
 
