--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,9 +1,17 @@
-<% if @current_user.role? :is_staff %>
- 
- <%= render :partial => "staff_dashboard" %>
+<div class="panel"> 
 
-<% else %>
+ <h3>Welcome, <%="#{@current_user.first_name}"%></h3>
  
- <%= render :partial => "requester_dashboard" %>
-
-<% end %>
+ <br/>
+ 
+ <% if @current_user.role? :is_staff %>
+  
+  <%= render :partial => "staff_dashboard" %>
+ 
+ <% else %>
+  
+  <%= render :partial => "requester_dashboard" %>
+ 
+ <% end %>
+ 
+</div>
