--- a/app/views/whitelists/form_partials/_filters_checkboxes.html.erb
+++ b/app/views/whitelists/form_partials/_filters_checkboxes.html.erb
@@ -4,7 +4,7 @@
   <% if Filter.all.empty? %>
   No filters can be selected because there are none in the system.
   <% else %>
-    <% for resourceName in Resource::RESOURCE_LIST %>
+    <% for resourceName in Resources::RESOURCE_LIST %>
       <h5><%= resourceName.capitalize + " Filters" %></h5>
       <% for filter in Filter.restrict_to(resourceName).alphabetical %>
           <%= check_box_tag "whitelist[filter_ids][]", filter.id, @whitelist.filters.include?(filter) %>
