--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -7,7 +7,7 @@
         <h1>
           <%= link_to root_url, { id: "root-link" } do %>
             <div id="large-logo"><%= image_tag "cmu_logo.png", size: "280x40", id: "cmu_logo" %>&nbsp;&nbsp;The Bridge API</div>
-            <div id="medium-logo">The Bridge API</div>
+            <div>The Bridge API</div>
           <% end %>
         </h1>
 
