Remove printing of env

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -6,7 +6,7 @@
       <li class="name">
         <h1>
           <%= link_to (@current_user ? home_url : root_url), { id: "root-link" } do %>
-            <div id="large-logo"><%= image_tag "cmu_logo.png", size: "280x40", id: "cmu_logo" %>&nbsp;&nbsp;The Bridge API (<%= Rails.env %>)</div>
+            <div id="large-logo"><%= image_tag "cmu_logo.png", size: "280x40", id: "cmu_logo" %>&nbsp;&nbsp;The Bridge API</div>
             <div>The Bridge API</div>
           <% end %>
         </h1>
