Made error explanation a class, not an id

--- a/app/views/shared/_bad_organizations_warning.html.erb
+++ b/app/views/shared/_bad_organizations_warning.html.erb
@@ -1,7 +1,6 @@
-
 <!-- Warn the staff if there are inactive orgs with keys that arent expired -->
 <% unless @bad_organizations.empty? %>
-  <fieldset id="error_explanation">
+  <fieldset class="error_explanation">
     <p><strong class="alert">Warning:</strong> There are organizations which no longer
     exist in CollegiateLink but which still belong to non-expired keys:</p>
     
