--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -47,8 +47,7 @@
   padding: 0;
 }
 
-
-#error_explanation {
+.error_explanation {
   background-color: lighten($primary-color, 55);
   border-radius: 8px;
 }
@@ -58,7 +57,6 @@
     border-left: 1px solid #000;
     border-right: 1px solid #000;
 }
-
 .tabs-content > .content {
   padding: 2em;
 }
