--- a/app/views/shared/_error_messages.html.erb
+++ b/app/views/shared/_error_messages.html.erb
@@ -1,5 +1,5 @@
 <% if object.errors.any? %>
-  <fieldset id="error_explanation">
+  <fieldset class="error_explanation">
     <p><strong class="alert"><%= pluralize(object.errors.count, "error") %></strong> occurred:</hp>
 
     <ul>
