--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -13,7 +13,7 @@
       <%= f.label :role, class: "prefix" %>
     </div>
     <div class="s9">
-      <%= f.select :role, User::ROLE_LIST %>
+      <%= f.select :role, User::ROLE_LIST.invert %>
     </div>
   </div>
   <div class="collapsed_row">
