--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,11 +1,16 @@
 <p>
-  <strong>Andrew:</strong>
+  <strong>Name:</strong>
+  <%= @user.name %>
+</p>
+
+<p>
+  <strong>Andrew Id:</strong>
   <%= @user.andrew_id %>
 </p>
 
 <p>
   <strong>Role:</strong>
-  <%= @user.role %>
+  <%= @user.display_role %>
 </p>
 
 <p>
