--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -46,12 +46,14 @@
   margin: 0;
   padding: 0;
 }
-
 .error_explanation {
-  background-color: lighten($primary-color, 55);
+  background-color: $alert;
   border-radius: 8px;
 }
-
+.notice_explanation {
+  background-color: $info-color;
+  border-radius: 8px;
+}
 .tabs dd.active a, .tabs .tab-title.active a {
     border-top: 1px solid #000;
     border-left: 1px solid #000;
