--- a/app/views/shared/_error_messages.html.erb
+++ b/app/views/shared/_error_messages.html.erb
@@ -1,11 +1,8 @@
 <% if object.errors.any? %>
   <fieldset class="error_explanation">
-    <p><strong class="alert"><%= pluralize(object.errors.count, "error") %></strong> occurred:</hp>
-
-    <ul>
     <% object.errors.each do |key, message| %>
-      <li><%= key unless key==:base %> <%= message %></li>
+      <p><strong>Error: </strong></hp>
+      <%= key unless key==:base %> <%= message %></li>
     <% end %>
-    </ul>
   </fieldset>
 <% end %>
