--- a/app/views/user_keys/show_partials/_list_of_resources.html.erb
+++ b/app/views/user_keys/show_partials/_list_of_resources.html.erb
@@ -10,7 +10,7 @@
   
   <div class="row">
     <div class="small-7 columns">
-    <h4>Automatic API Requests</h4>
+    <h4>Whitelists</h4>
       
     <% if !whitelists.empty? %>
       <ol>
