--- a/app/views/user_keys/show_partials/_status_warning.html.erb
+++ b/app/views/user_keys/show_partials/_status_warning.html.erb
@@ -1,24 +1,24 @@
 <!-- Warn the user key owner when the key is inactive, in progress, expired, about to expire, or good to go -->
+<% message_class = "alert" %>
 
-<% message_class = "error" %>
-<!-- Errors -->
+<!-- Alerts, shown to everyone -->
 <% if !@user_key.active %>
   <% message = "This key has been suspended indefinitely by an administrator and is not available." %> 
 <% elsif @user_key.expired? %>
   <% message = "This key has expired and is no longer in available." %>
 
-<!--Notices-->
-<% elsif @user_key.will_expire_soon? %>
-  <% message = "This key will expire soon. You will receive an automated email when the key expires." %>
+<!--Notices, shown only to requesters-->
+<% elsif @user_key.will_expire_soon? and current_user.role? :requester %>
+  <% message = "This key will expire soon. All API access will be revoked when the key expires." %>
   <% message_class = "notice" %>
-<% elsif @user_key.at_stage? :awaiting_filters or @user_key.at_stage? :awaiting_confirmation %>
-  <% message = "This application is being processed.
-                You will receive an automated email when the status of your application changes." %>
+<% elsif (@user_key.at_stage? :awaiting_filters or @user_key.at_stage? :awaiting_confirmation) and current_user.role? :requester %>
+  <% message = "This application is currently being processed.
+                You will receive an automated email when the status of the application changes." %>
   <% message_class = "notice" %>
 <% end %>
   
 <% unless message.nil?%>  
-  <fieldset class="<%= message_class %>_explanation">
+  <fieldset class="<%= message_class == "alert" ? "error" : "notice" %>_explanation">
     <p><strong><%= message_class.capitalize %></strong>: <%= message %></p>
   </fieldset>
 <% end %>
