Fixed filter index bug for non admins

--- a/app/views/filters/index.html.erb
+++ b/app/views/filters/index.html.erb
@@ -19,6 +19,7 @@
     <% if @current_user.role? :admin %>
       <%= link_to 'New Filter', new_filter_path, class: "big-button" %>
     <% end %>
+   &nbsp;
   </div>
   
   <%#  Kaminari paginate  %>
