--- a/app/views/user_key_mailer/key_approved_msg.html.erb
+++ b/app/views/user_key_mailer/key_approved_msg.html.erb
@@ -1,1 +1,1 @@
-<p>The <%= @user_key.name %> key request has been approved! It will expire on <%= @user_key.time_expired.to_formatted_s(:long_ordinal)  %>. Visit  #FIXME put actual website url here# to get the key and documentation on how to use it. </p>
+<p>The <%= @user_key.name %> key request has been approved! It will expire on <%= @user_key.time_expired.to_formatted_s(:long_ordinal)  %>. Visit <%= link_to nil, home_url %> to get the key value and documentation on how to use it. </p>
