--- a/app/views/user_keys/show_partials/_admin_only.html.erb
+++ b/app/views/user_keys/show_partials/_admin_only.html.erb
@@ -10,13 +10,20 @@
     <br/>
 
     <%#  Currently no restrictions exist for delete. %>
+    <span class="has-tip tip-top" data-tooltip aria-haspopup="true" title="This action will remove this key and its application data from the system.">
     <%= link_to 'Delete', @user_key, method: :delete,
                  data: { confirm: 'Are you sure? The application will be deleted, and the requester will be notified that their application has been terminated.' }, class: "small-button" %>
+    </span>
+ 
     <%#   Reset is currently only available after submission and before confirmation. %>
     <% if @user_key.at_stage? :awaiting_confirmation or @user_key.at_stage? :awaiting_filters %>
-      | <%= link_to 'Reset', set_as_reset_path(@user_key), method: :patch,
+      | <span class="has-tip tip-top" data-tooltip aria-haspopup="true" title="This action will send the application back to its requester so that the requester can make changes as needed.
+      Until the application is resubmitted by the requester, it will no longer be visible to staff.">
+                 <%= link_to 'Remand', set_as_reset_path(@user_key), method: :patch,
                  data: { disable_with: "Please Wait..." },
                  data: { confirm: 'Are you sure? The key application and comments will be returned to the requester.' },
                  class: "small-button" %>
+                 
+        </span>
     <% end %>
   </fieldset>
