--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -21,14 +21,18 @@
 
 </br>
 
+<span class="has-tip tip-top" "data-tooltip aria-haspopup="true" title="This action will pull data from CollegiateLink API
+to refresh the list of organizations in the system.">
 <%= link_to 'Sync Organizations Look-up Table',
                repopulate_organizations_path, 
                method: :patch, class: "big-button center",
                data: { disable_with: "Please Wait...",
                confirm: "Are you sure? This will send 1 request to CollegiateLink API for their organizations." } %>
-
+</span>
 <br/>
-  
+
+<span class="has-tip tip-top" "data-tooltip aria-haspopup="true" title="This action will pull data from CollegiateLink API
+to refresh the list of columns known to be used by CollegiateLink.">
 <%= link_to 'Sync Columns', repopulate_columns_path,
       method: :patch, class: "small-button center",
       data: { disable_with: "Please Wait...",
