--- a/app/views/user_keys/show_partials/_submit_buttons.html.erb
+++ b/app/views/user_keys/show_partials/_submit_buttons.html.erb
@@ -7,7 +7,7 @@ for using the Bridge API.
 </p>
 
 <%# Key owner can submit the key or edit the application before submitting. %>
-  <%= link_to 'Submit request', set_as_submitted_path(@user_key), method: :patch,
+  <%= link_to 'Submit application', set_as_submitted_path(@user_key), method: :patch,
               data: {disable_with: "Please Wait..." },
               class: "big-button success",
               disabled: !(@user_key.can_be_set_to? :awaiting_filters)  %>
